Creating collections endpoint
To proxy collections API
