# backboi/api/api.go
@@ -7,6 +7,7 @@ import (
 	"io/ioutil"
 	"net/http"
 
+	"github.com/fuz95esi/binboi/backboi/utils"
 	"github.com/labstack/echo/v4"
 )
 
@@ -26,7 +27,7 @@ func NewProxy() *Proxy {
 
 func NewStatus(i StatusCode, m string) *Status {
 	return &Status{
-		Code:    int32(i),
+		Code:    int(i),
 		Message: m,
 	}
 }
@@ -73,12 +74,26 @@ func (p *Proxy) GetAddresses(ctx echo.Context, postcode string) error {
 	return proxyEndpoint(ctx, endpoint, addresses)
 }
 
-func (p *Proxy) Subscribe(ctx echo.Context) error {
-	return ctx.JSON(http.StatusNotImplemented, statusCode(StatusNotImplemented, "Subscribe"))
-}
+func (p *Proxy) GetCollectionDates(ctx echo.Context, uprn string, params GetCollectionDatesParams) error {
+	endpoint := fmt.Sprintf("https://api.reading.gov.uk/api/collections/%s", uprn)
+	var collections Collections
 
-func (p *Proxy) GetSubscriptionDetails(ctx echo.Context, subscriptionId string) error {
-	return ctx.JSON(http.StatusNotImplemented, statusCode(StatusNotImplemented, "GetSubscriptionDetails"))
+	queryParamsList := []string{}
+
+	if params.FromDate != nil {
+		queryParamsList = append(queryParamsList, "from_date="+*params.FromDate)
+	}
+
+	if params.ToDate != nil {
+		queryParamsList = append(queryParamsList, "to_date="+*params.ToDate)
+	}
+
+	if len(queryParamsList) > 0 {
+		queryParams := utils.BuildQueryParams(queryParamsList)
+		endpoint = endpoint + "?" + queryParams
+	}
+
+	return proxyEndpoint(ctx, endpoint, collections)
 }
 
 func (p *Proxy) Health(ctx echo.Context) error {
